testData/diagnostics/invalid_string_interp_2.diag.txt
testData/diagnostics/invalid_string_interp_2.nut line = (1) column = (10) : error: recursion in reader macro
println($"{$"{2}"}");
          ^

